--- a/cigar_rating_config.html
+++ b/cigar_rating_config.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="配置 Pistacho 雪茄评分体系、风味列表与权重参数，为社区提供一致的评测体验。">
+    <meta name="keywords" content="Pistacho, 配置管理, 雪茄评分体系, 风味设置, 权重调整">
+    <meta name="robots" content="noindex, nofollow">
+    <meta property="og:title" content="雪茄品鉴配置管理 - Pistacho">
+    <meta property="og:description" content="通过 Pistacho 配置面板维护雪茄评分标准与风味标签，确保社区口径一致。">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="Certifiedstamp.png">
+    <meta property="og:locale" content="zh_CN">
+    <meta name="twitter:card" content="summary_large_image">
     <title>雪茄品鉴配置管理</title>
+    <link rel="icon" type="image/png" href="Certifiedstamp.png">
     
     <script src="https://cdn.tailwindcss.com"></script>
 
