--- a/history.html
+++ b/history.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="管理你的 Pistacho 雪茄评分历史，快速回顾所有已发布的品鉴记录。">
+    <meta name="keywords" content="Pistacho, 我的评分, 雪茄历史, 品鉴记录, 雪茄收藏">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="我的雪茄评分 - Pistacho">
+    <meta property="og:description" content="在 Pistacho 查看个人雪茄点评历史，掌握所有发布记录与互动情况。">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="Certifiedstamp.png">
+    <meta property="og:locale" content="zh_CN">
+    <meta name="twitter:card" content="summary_large_image">
     <title data-i18n="historyPage.title">我的评分</title>
+    <link rel="icon" type="image/png" href="Certifiedstamp.png">
     <script src="https://cdn.tailwindcss.com"></script>
 
     <script src="https://unpkg.com/i18next/i18next.min.js"></script>
