--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pistacho 评分社区</title> <script src="https://cdn.tailwindcss.com"></script>
+    <meta name="description" content="Pistacho 雪茄评分社区提供精选的雪茄点评、评分与认证内容，帮助雪茄爱好者分享与发现卓越体验。">
+    <meta name="keywords" content="Pistacho, 雪茄评分, 雪茄社区, 雪茄认证, 雪茄点评">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Pistacho 评分社区">
+    <meta property="og:description" content="加入 Pistacho 雪茄评分社区，获取精选雪茄点评与认证记录，发现下一支必试雪茄。">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="Certifiedstamp.png">
+    <meta property="og:locale" content="zh_CN">
+    <meta name="twitter:card" content="summary_large_image">
+    <title>Pistacho 评分社区</title>
+    <link rel="icon" type="image/png" href="Certifiedstamp.png">
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <script src="https://unpkg.com/i18next/i18next.min.js"></script>
     <script src="https://unpkg.com/i18next-http-backend/i18nextHttpBackend.min.js"></script>
