--- a/results.html
+++ b/results.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="查看 Pistacho 雪茄品鉴报告，回顾完整的评分细节、口感总结与分享卡片。">
+    <meta name="keywords" content="Pistacho, 雪茄报告, 品鉴结果, 雪茄评分, 分享卡片">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="雪茄品鉴报告 - Pistacho">
+    <meta property="og:description" content="在 Pistacho 浏览详细的雪茄点评结果，生成二维码分享并导出高分卡片。">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="Certifiedstamp.png">
+    <meta property="og:locale" content="zh_CN">
+    <meta name="twitter:card" content="summary_large_image">
     <title>雪茄品鉴 - 点评报告</title>
+    <link rel="icon" type="image/png" href="Certifiedstamp.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
