--- a/rate.html
+++ b/rate.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="在 Pistacho 发布雪茄点评，记录口感、评分与照片，与全球雪茄爱好者分享你的独到见解。">
+    <meta name="keywords" content="Pistacho, 发布点评, 雪茄评分, 雪茄分享, 雪茄体验">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="发布雪茄点评 - Pistacho">
+    <meta property="og:description" content="使用 Pistacho 雪茄评分工具发布专业点评、上传照片并管理品鉴记录。">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="Certifiedstamp.png">
+    <meta property="og:locale" content="zh_CN">
+    <meta name="twitter:card" content="summary_large_image">
     <title data-i18n="ratePage.title">发布雪茄点评</title>
+    <link rel="icon" type="image/png" href="Certifiedstamp.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.1/cropper.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
