--- a/role_management.html
+++ b/role_management.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="在 Pistacho 后台管理用户角色、权限与管理员设置，保障社区运营安全。">
+    <meta name="keywords" content="Pistacho, 角色管理, 超级管理员, 权限控制, 社区运营">
+    <meta name="robots" content="noindex, nofollow">
+    <meta property="og:title" content="用户角色管理 - Pistacho">
+    <meta property="og:description" content="使用 Pistacho 后台工具配置管理员、编辑与认证人员角色，保持内容质量。">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="Certifiedstamp.png">
+    <meta property="og:locale" content="zh_CN">
+    <meta name="twitter:card" content="summary_large_image">
     <title>用户角色管理 - Super Admin</title>
+    <link rel="icon" type="image/png" href="Certifiedstamp.png">
     <script src="https://cdn.tailwindcss.com"></script>
 
     <script src="https://unpkg.com/i18next/i18next.min.js"></script>
