feat: enrich share metadata on result page

--- a/results.html
+++ b/results.html
@@ -11,7 +11,11 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="Certifiedstamp.png">
     <meta property="og:locale" content="zh_CN">
+    <meta property="og:url" content="https://www.pista-cho.com/results.html">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="雪茄品鉴报告 - Pistacho">
+    <meta name="twitter:description" content="查看 Pistacho 雪茄品鉴报告，回顾完整的评分细节、口感总结与分享卡片。">
+    <meta name="twitter:image" content="Certifiedstamp.png">
     <title>雪茄品鉴 - 点评报告</title>
     <link rel="icon" type="image/png" href="Certifiedstamp.png">
 
@@ -348,6 +352,7 @@
         const SHARE_IMAGE_MAX_RETRIES = 5; // Limit retries to avoid infinite loops
         const SHARE_IMAGE_RETRY_DELAY = 800; // Base delay (ms) between retries
         const PRODUCTION_ORIGIN = 'https://www.pista-cho.com'; // Canonical domain used for share links
+        const DEFAULT_SHARE_DESCRIPTION = '查看 Pistacho 雪茄品鉴报告，回顾完整的评分细节、口感总结与分享卡片。';
         const commentState = {
             comments: [],
             mutedUserIds: new Set(),
@@ -1045,6 +1050,114 @@
             }
         }
 
+        function getCanonicalOrigin() {
+            try {
+                if (window.location && window.location.origin && window.location.origin !== 'null') {
+                    return window.location.origin;
+                }
+            } catch (error) {
+                console.warn('[results.html getCanonicalOrigin] Unable to read window.location.origin, using production origin.', error);
+            }
+            return PRODUCTION_ORIGIN;
+        }
+
+        function ensureAbsoluteUrl(pathOrUrl) {
+            if (!pathOrUrl) return null;
+            try {
+                return new URL(pathOrUrl).toString();
+            } catch (error) {
+                const origin = getCanonicalOrigin();
+                if (!origin) return pathOrUrl;
+                const sanitizedPath = pathOrUrl.startsWith('/') ? pathOrUrl : `/${pathOrUrl.replace(/^\//, '')}`;
+                return `${origin.replace(/\/$/, '')}${sanitizedPath}`;
+            }
+        }
+
+        function resolveShareImageUrl(imageEntry) {
+            if (!imageEntry) {
+                return ensureAbsoluteUrl('Certifiedstamp.png');
+            }
+
+            if (typeof imageEntry !== 'string') {
+                return ensureAbsoluteUrl('Certifiedstamp.png');
+            }
+
+            if (/^https?:\/\//i.test(imageEntry)) {
+                return imageEntry;
+            }
+
+            if (imageEntry.startsWith('/')) {
+                return ensureAbsoluteUrl(imageEntry);
+            }
+
+            return ensureAbsoluteUrl(`/api/image/${imageEntry}`);
+        }
+
+        function setOrCreateMetaTag(attributeName, attributeValue, content) {
+            if (!attributeName || !attributeValue) return;
+            let selector = `meta[${attributeName}="${attributeValue}"]`;
+            let tag = document.head.querySelector(selector);
+            if (!tag) {
+                tag = document.createElement('meta');
+                tag.setAttribute(attributeName, attributeValue);
+                document.head.appendChild(tag);
+            }
+            if (content !== undefined && content !== null) {
+                tag.setAttribute('content', content);
+            }
+        }
+
+        function updatePageMetadata(metaData) {
+            if (!metaData || !i18next.isInitialized) return;
+
+            const titleText = metaData.title || i18next.t('common.noTitle');
+            const shareTitle = `${titleText} - Pistacho`;
+            document.title = shareTitle;
+
+            const normalizedScore = typeof metaData.normalizedScore === 'number'
+                ? metaData.normalizedScore.toFixed(2)
+                : null;
+            let gradeLabel = null;
+            if (metaData.finalGrade) {
+                if (metaData.finalGrade.nameKey) {
+                    gradeLabel = i18next.t(metaData.finalGrade.nameKey);
+                } else if (metaData.finalGrade.name_cn || metaData.finalGrade.name) {
+                    gradeLabel = metaData.finalGrade.name_cn || metaData.finalGrade.name;
+                }
+            }
+
+            const descriptionParts = [];
+            if (metaData.cigarInfo?.name) {
+                descriptionParts.push(metaData.cigarInfo.name);
+            }
+            if (gradeLabel && normalizedScore) {
+                descriptionParts.push(`${gradeLabel} · ${normalizedScore}`);
+            } else if (gradeLabel) {
+                descriptionParts.push(gradeLabel);
+            } else if (normalizedScore) {
+                descriptionParts.push(`评分 ${normalizedScore}`);
+            }
+            const reviewer = metaData.userNickname || metaData.userEmail;
+            if (reviewer) {
+                descriptionParts.push(`${i18next.t('resultsPage.by', { defaultValue: '点评来自:' })} ${reviewer}`);
+            }
+
+            const shareDescription = descriptionParts.join(' | ') || DEFAULT_SHARE_DESCRIPTION;
+            const shareImage = resolveShareImageUrl(Array.isArray(metaData.imageUrls) && metaData.imageUrls.length > 0 ? metaData.imageUrls[0] : null);
+            const shareUrl = buildShareUrl();
+
+            setOrCreateMetaTag('name', 'description', shareDescription);
+            setOrCreateMetaTag('property', 'og:title', shareTitle);
+            setOrCreateMetaTag('property', 'og:description', shareDescription);
+            setOrCreateMetaTag('property', 'og:image', shareImage);
+            setOrCreateMetaTag('property', 'og:url', shareUrl);
+            setOrCreateMetaTag('name', 'twitter:title', shareTitle);
+            setOrCreateMetaTag('name', 'twitter:description', shareDescription);
+            if (shareImage) {
+                setOrCreateMetaTag('name', 'twitter:image', shareImage);
+            }
+        }
+
         // Generates QR code and resolves promise on image load/error
         function generateQRCode() {
             return new Promise((resolve, reject) => {
@@ -1459,7 +1572,8 @@
             const resolvedFinalGrade = resolveFinalGrade(rawFinalGrade, normalizedScore);
             data.finalGrade = resolvedFinalGrade;
             const title = data.title || i18next.t('common.noTitle');
-            const userNickname = data.userNickname || data.userEmail || i18next.t('common.anonymous');
+            const reviewerName = data.userNickname || data.userEmail || null;
+            const userNickname = reviewerName || i18next.t('common.anonymous');
 
             // --- ADDED LOGS ---
             console.log("[results.html renderPageContent] Trying to render:");
@@ -1472,6 +1586,16 @@
             console.log("  > Final Grade:", JSON.stringify(resolvedFinalGrade));
             console.log("  > Is Draft:", isDraft);
             // --- END ADDED LOGS ---
+
+            updatePageMetadata({
+                title,
+                normalizedScore,
+                finalGrade: resolvedFinalGrade,
+                cigarInfo,
+                userNickname: data.userNickname,
+                userEmail: data.userEmail,
+                imageUrls: Array.isArray(data.imageUrls) ? data.imageUrls : [],
+            });
 
             // --- ADDED: Get references to DOM elements ---
              const userNicknameEl = document.getElementById('user-nickname');
