Add multilingual tobacco warning to home footer

--- a/index.html
+++ b/index.html
@@ -141,8 +141,11 @@
             <p id="loading-message" class="col-span-full text-center text-gray-500 py-10" data-i18n="indexPage.loadingRatings">正在加载点评...</p>
         </div>
 
-         <footer class="mt-8 text-center text-gray-500 text-sm">
-             Pistacho 雪茄评分社区
+         <footer class="mt-8 text-center text-gray-500 text-sm space-y-2">
+             <div>Pistacho 雪茄评分社区</div>
+             <p class="text-xs text-gray-400" data-i18n="indexPage.smokingWarning">
+                 吸烟酗酒有害健康，本网站含烟酒内容未成年人请回避。
+             </p>
          </footer>
     </div>
 
