--- a/index.html
+++ b/index.html
@@ -23,33 +23,32 @@
     <link rel="canonical" id="canonical-link" href="/">
     <title>Pistacho 评分社区</title>
     <link rel="icon" type="image/png" href="Certifiedstamp.png">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://cdn.tailwindcss.com" crossorigin>
+    <link rel="preconnect" href="https://unpkg.com" crossorigin>
+    <script src="https://cdn.tailwindcss.com" defer></script>
 
-    <script src="https://unpkg.com/i18next/i18next.min.js"></script>
-    <script src="https://unpkg.com/i18next-http-backend/i18nextHttpBackend.min.js"></script>
-    <script src="https://unpkg.com/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.min.js"></script>
+    <script src="https://unpkg.com/i18next/i18next.min.js" defer></script>
+    <script src="https://unpkg.com/i18next-http-backend/i18nextHttpBackend.min.js" defer></script>
+    <script src="https://unpkg.com/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.min.js" defer></script>
     <script type="module" src="scripts/navbar.js"></script>
 
     <script>
-        if (typeof tailwind !== 'undefined') {
-            tailwind.config = {
-                theme: {
-                    extend: {
-                        fontFamily: {
-                            sans: ['Inter', 'Noto Sans SC', 'system-ui', 'sans-serif'],
-                        },
-                        aspectRatio: {
-                            '1179/1572': '1179 / 1572',
-                        },
-                         fontSize: {
-                            '2xs': ['0.625rem', { lineHeight: '0.8rem' }], // ~10px
-                         }
+        window.tailwind = window.tailwind || {};
+        window.tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'Noto Sans SC', 'system-ui', 'sans-serif'],
+                    },
+                    aspectRatio: {
+                        '1179/1572': '1179 / 1572',
+                    },
+                    fontSize: {
+                        '2xs': ['0.625rem', { lineHeight: '0.8rem' }], // ~10px
                     }
                 }
             }
-        } else {
-            console.warn('Tailwind object not found. Skipping config.');
-        }
+        };
     </script>
     <style>
         .rating-card:hover {
@@ -153,6 +152,12 @@
         let allRatings = [];
         let displayedRatings = {};
         let currentAuthUser = null;
+
+        const GRID_BATCH_SIZE = 20;
+        const GRID_OBSERVER_MARGIN = '200px';
+        let pendingRenderQueue = [];
+        let ratingsGridObserver = null;
+        let ratingsGridSentinel = null;
 
         // --- i18n Functions ---
         async function initI18n() {
@@ -607,6 +612,90 @@
             }
         }
 
+        function cleanupGridObserver() {
+            if (ratingsGridObserver) {
+                ratingsGridObserver.disconnect();
+                ratingsGridObserver = null;
+            }
+        }
+
+        function ensureGridSentinel() {
+            if (!ratingsGridSentinel) {
+                ratingsGridSentinel = document.createElement('div');
+                ratingsGridSentinel.id = 'ratings-grid-sentinel';
+                ratingsGridSentinel.className = 'col-span-full h-1';
+                ratingsGridSentinel.setAttribute('aria-hidden', 'true');
+            }
+            if (ratingsGrid && !ratingsGridSentinel.isConnected) {
+                ratingsGrid.appendChild(ratingsGridSentinel);
+            }
+        }
+
+        function appendNextRatingsBatch() {
+            if (!ratingsGrid || pendingRenderQueue.length === 0) {
+                if (ratingsGridSentinel && ratingsGridSentinel.isConnected) {
+                    ratingsGridSentinel.remove();
+                }
+                cleanupGridObserver();
+                return;
+            }
+
+            const fragment = document.createDocumentFragment();
+            let appended = 0;
+            while (pendingRenderQueue.length > 0 && appended < GRID_BATCH_SIZE) {
+                const rating = pendingRenderQueue.shift();
+                if (!rating || !rating.id) {
+                    continue;
+                }
+                const card = createRatingCard(rating);
+                if (card) {
+                    fragment.appendChild(card);
+                }
+                appended += 1;
+            }
+
+            if (fragment.childNodes.length) {
+                if (ratingsGridSentinel && ratingsGridSentinel.isConnected) {
+                    ratingsGrid.insertBefore(fragment, ratingsGridSentinel);
+                } else {
+                    ratingsGrid.appendChild(fragment);
+                }
+            }
+
+            if (pendingRenderQueue.length === 0) {
+                if (ratingsGridSentinel && ratingsGridSentinel.isConnected) {
+                    ratingsGridSentinel.remove();
+                }
+                cleanupGridObserver();
+            }
+        }
+
+        function setupGridObserver() {
+            if (!ratingsGrid || pendingRenderQueue.length === 0) {
+                cleanupGridObserver();
+                if (ratingsGridSentinel && ratingsGridSentinel.isConnected) {
+                    ratingsGridSentinel.remove();
+                }
+                return;
+            }
+
+            ensureGridSentinel();
+
+            if (!ratingsGridObserver) {
+                ratingsGridObserver = new IntersectionObserver((entries) => {
+                    if (entries.some(entry => entry.isIntersecting)) {
+                        appendNextRatingsBatch();
+                    }
+                }, { root: null, rootMargin: GRID_OBSERVER_MARGIN, threshold: 0 });
+            } else {
+                ratingsGridObserver.disconnect();
+            }
+
+            if (ratingsGridSentinel) {
+                ratingsGridObserver.observe(ratingsGridSentinel);
+            }
+        }
+
         window.applyFilters = function() {
             if (!searchInput || !sortSelect || !ratingsGrid || !loadingMessage || !i18next.isInitialized) {
                 console.error("applyFilters called before DOM ready or i18n initialized.");
@@ -645,23 +734,40 @@
              if (!ratingsGrid || !loadingMessage || !i18next.isInitialized) return;
 
             ratingsGrid.innerHTML = '';
+            cleanupGridObserver();
+            if (ratingsGridSentinel && ratingsGridSentinel.isConnected) {
+                ratingsGridSentinel.remove();
+            }
+
             if (!Array.isArray(ratingsToRender) || ratingsToRender.length === 0) {
                 loadingMessage.textContent = i18next.t('indexPage.noMatches');
                 loadingMessage.style.display = 'block';
+                displayedRatings = {};
+                pendingRenderQueue = [];
                 return;
             }
+
             loadingMessage.style.display = 'none';
+            displayedRatings = {};
+            pendingRenderQueue = [];
+
             ratingsToRender.forEach(rating => {
-                 if (!rating || !rating.id) {
-                     console.warn("Skipping rendering invalid rating object:", rating);
-                     return;
-                 }
-                displayedRatings[rating.id] = rating;
-                const card = createRatingCard(rating);
-                if (card) {
-                     ratingsGrid.appendChild(card);
+                if (!rating || !rating.id) {
+                    console.warn("Skipping rendering invalid rating object:", rating);
+                    return;
                 }
+                displayedRatings[rating.id] = rating;
+                pendingRenderQueue.push(rating);
             });
+
+            if (pendingRenderQueue.length === 0) {
+                return;
+            }
+
+            appendNextRatingsBatch();
+            if (pendingRenderQueue.length > 0) {
+                setupGridObserver();
+            }
         }
 
         function createRatingCard(rating) {
@@ -730,8 +836,8 @@
             div.innerHTML = `
                 <div class="aspect-[1179/1572] w-full overflow-hidden flex-shrink-0 relative">
                      ${isPinned ? `<div class="pinned-indicator" title="${i18next.t('common.pin')}">${pinIconSvg} ${i18next.t('common.pin')}</div>` : ''}
-                     ${isCertified ? `<img src="/Certifiedstamp.png${cacheBuster}" alt="Certified" class="absolute top-2 left-2 w-1/3 h-auto z-10" title="Pistacho 认证评分" onerror="handleStampError(this)">` : ''}
-                     ${coverImageUrl ? `<img src="/api/image/${coverImageUrl}" alt="${rating.cigarInfo?.name || '雪茄图片'}" class="w-full h-full object-cover">` : `<div class="w-full h-full bg-gray-200 flex items-center justify-center text-gray-400 text-sm">${i18next.t('certifiedPage.noImage')}</div>`}
+                     ${isCertified ? `<img src="/Certifiedstamp.png${cacheBuster}" alt="Certified" class="absolute top-2 left-2 w-1/3 h-auto z-10" title="Pistacho 认证评分" onerror="handleStampError(this)" loading="lazy">` : ''}
+                     ${coverImageUrl ? `<img src="/api/image/${coverImageUrl}" alt="${rating.cigarInfo?.name || '雪茄图片'}" class="w-full h-full object-cover" loading="lazy">` : `<div class="w-full h-full bg-gray-200 flex items-center justify-center text-gray-400 text-sm">${i18next.t('certifiedPage.noImage')}</div>`}
                 </div>
                 <div class="p-1.5 sm:p-2 flex-grow flex flex-col justify-between">
                      <div>
